Add password reset endpoints and some testings for the coverage
