# resources/lang/en/mail.php
@@ -11,4 +11,12 @@ return [
     'team' => 'The :app_name team',
     'footer' => 'If you have trouble with this link, you can copy and paste it into your browser:',
     'title' => 'Email Address Verification',
+    'subject_password' => '[:app_name] Password Reset',
+    'title_password' => 'Password Reset',
+    'greeting_password' => 'Hello :lastname :firstname,',
+    'line_1_password' => 'We have received a request to reset the password for your account.',
+    'line_2_password' => 'Please click the button below to reset your password:',
+    'action_password' => 'Reset My Password',
+    'note_password' => 'If you did not request a password reset, no action is required.',
+    'footer_password' => 'If you have trouble with this link, you can copy and paste it into your browser:',
 ];
